[tool.poetry]
name = "food-link"
version = "0.1.0"
description = ""
authors = ["Everson Esteves <esteveseverson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic = "^2.10.5"
pydantic-config = "^0.3.0"
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pyjwt = "^2.10.1"
tzdata = "^2024.2"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.9.2"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev food_link/app.py'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
